--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:inputType="textPassword" />
 
     <Button
+        android:background="@drawable/red_bordered_round_rect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그인"
