--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -32,6 +32,8 @@
         android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/loginBtn"
+        android:layout_marginTop="20dp"
         android:background="@drawable/red_bordered_round_rect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
